add nullchecks